force-app/main/default/objects/Scope_of_Product__c/Scope_of_Product__c.object-meta.xml
<CustomObject>
    <description>This object used to store the contract&apos;s scope of products</description>
    <label>Scope of Product</label>
    <nameField>
        <label>Scope of Product Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>