force-app/main/default/objects/Scope_of_Product__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the asset</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Scope of Product</relationshipLabel>
    <relationshipName>Scope_of_Product</relationshipName>
    <type>Lookup</type>
</CustomField>