force-app/main/default/objects/Scope_of_Product__c/fields/DeliverableId__c.field-meta.xml
<CustomField>
    <fullName>DeliverableId__c</fullName>
    <description>This field is used to store the deliverable id from the contract product API response</description>
    <label>DeliverableId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>