force-app/main/default/objects/Scope_of_Product__c/fields/Full_Model_MS_Code__c.field-meta.xml
<CustomField>
    <fullName>Full_Model_MS_Code__c</fullName>
    <description>This field is used to store the full model and MS code.</description>
    <label>Full Model / MS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>