force-app/main/default/objects/Scope_of_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the product</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Scope of Product</relationshipLabel>
    <relationshipName>Scope_of_Product</relationshipName>
    <type>Lookup</type>
</CustomField>