force-app/main/default/objects/Scope_of_Product__c/fields/Scope_Description__c.field-meta.xml
<CustomField>
    <fullName>Scope_Description__c</fullName>
    <description>This field is used to store the scope description</description>
    <label>Scope Description</label>
    <type>TextArea</type>
</CustomField>