force-app/main/default/objects/Scope_of_Product__c/fields/Serial_no__c.field-meta.xml
<CustomField>
    <fullName>Serial_no__c</fullName>
    <description>This field is used to store the serial number</description>
    <label>Serial no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>