force-app/main/default/objects/Scope_of_Product__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the service contract</description>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Scope of Product</relationshipLabel>
    <relationshipName>Scope_of_Product</relationshipName>
    <type>Lookup</type>
</CustomField>