force-app/main/default/objects/Scope_of_Product__c/fields/Software_Revision__c.field-meta.xml
<CustomField>
    <fullName>Software_Revision__c</fullName>
    <description>This field is used to store the software revision number</description>
    <label>Software Revision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>